--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
     "httptools==0.6.4",
     "httpx==0.27.2",
     "httpx-sse==0.4.0",
-    "huggingface-hub==0.28.1",
+    "huggingface-hub==1.3.1",
     "humanfriendly==10.0",
     "idna==3.10",
     "importlib-metadata==8.5.0",
@@ -140,7 +140,7 @@ dependencies = [
     "scikit-learn==1.6.1",
     "scipy==1.15.1",
     "semantic-version==2.10.0",
-    "sentence-transformers==3.4.1",
+    "sentence-transformers==5.2.0",
     "setuptools==75.8.0",
     "shellingham==1.5.4",
     "six==1.17.0",
@@ -155,13 +155,13 @@ dependencies = [
     "tenacity==9.0.0",
     "threadpoolctl==3.5.0",
     "tiktoken==0.8.0",
-    "tokenizers==0.21.0",
+    "tokenizers==0.22.2",
     "toml==0.10.2",
     "tomlkit==0.13.2",
     "torch==2.6.0",
     "tornado==6.4.2",
     "tqdm==4.67.1",
-    "transformers==4.48.2",
+    "transformers==5.0.0rc2",
     "typer==0.15.1",
     "typing-extensions==4.12.2",
     "typing-inspect==0.9.0",
